--- a/app/modules/default/views/scripts/index/index.phtml
+++ b/app/modules/default/views/scripts/index/index.phtml
@@ -6,9 +6,11 @@ $jScript = <<<JS
 require(["core/Layout", "dojo/_base/lang", "core/helper/Validation"]);
 dojo.ready(function(){
 var template = Handlebars.compile(dojo.byId("entry-template").innerHTML);
-console.log(template({title: "Alan", body: "Johnson", people: ['sdfdsf', 'dfsdfsdf']}));
+//console.log(template({title: "Alan", body: "Johnson", people: ['sdfdsf', 'dfsdfsdf']}));
 /*var processing = core.layout.Processing({node: dojo.byId('loader')});
 processing.show('SEND');*/
+
+
 
 var Layout = new core.Layout({
     timeout: 3000,
@@ -19,7 +21,12 @@ var Layout = new core.Layout({
         node: dojo.byId('loader')
     }
 });
+console.log(Layout.baseUrl('test'));
+console.log(window.location);
 
+//protocol + host
+
+console.log(dojo.window.get('location'));
 require(["dojo/router", "dojo/_base/lang"], function(router, lang){
   router.register("something/:id", function(evt){
     // Will fire when the hash matches
@@ -35,7 +42,7 @@ var valid = new core.helper.Validation(dojo.byId('testform'));
 valid.setMessages({});
 valid.checkRequired();
 valid.display();
-console.log(valid);
+
 
 });
 JS;
